# midnight-validator-monitor

./: .gitignore  CHANGELOG.md  CHECKPOINT_v0.2.0.md  CHECKPOINT_v0.3.0.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.0-alpha.md  RELEASE_NOTES_v0.3.0-alpha.md  RELEASE_NOTES_v0.4.0-beta.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.1.md  RELEASE_PLAN_v0.2.md  RELEASE_PLAN_v0.3.md  RELEASE_PLAN_v0.7.md  SECURITY.md  known_validators.toml  known_validators.toml.example  midnight-validator-spec.md  mvm.toml.example
.github/workflows/: ci.yml  release.yml
announcements/: v0.9.3-discord.md  v0.9.3-forum.md
discord-context/: README.md
docs/: API-SPEC.md  BACKLOG.md  BLOCK_ATTRIBUTION.md  COMPATIBILITY.md  EPOCH_TIMING.md  EXTERNAL_IP_RESEARCH.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.0.5.md  RELEASE_PLAN_v1.0.md  ROADMAP.md  SECURITY_AUDIT_2026-01-19.md  STABILITY_REPORT_2026-02-21.md  V2-INTEGRATION.md  fresh-install-guide.md
docs/archive/: CHECKPOINT_v0.2.0.md  COMMITTEE_ANALYSIS_2026-01-16.md  DATABASE_INVESTIGATION_2026-01-16.md  INSTALL.md  MIDNIGHT_BLOCKLOG_ANALYSIS.md  RELEASE_NOTES_v0.4.0-alpha.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v0.9.1.md  RELEASE_NOTES_v0.9.3.md  RELEASE_PLAN_v0.2.md  RELEASE_PLAN_v0.3.md  RELEASE_PLAN_v0.4-beta.md  RELEASE_PLAN_v0.5.md  RESEARCH_FINDINGS_2026-01-16.md  STAKE_ALLOCATION_RESEARCH.md  TECHNICAL_SPEC_v0.4.md  VALIDATOR_COMMITTEE_DISCOVERY.md
scripts/: build-remote.sh  discord-export.sh  install.sh  uninstall.sh  zshrc-example
src/: alerts.rs  config.rs  daemon.rs  keys.rs  main.rs  metrics.rs  monitor.rs  rpc.rs  types.rs
src/commands/: config.rs  (+8 more)
systemd/: mvm-status.service  mvm-status.timer  mvm-sync.service
(+24 files in other folders)
