[package]
name = "midnight-validator-monitor"
version = "0.9.3"
edition = "2021"
description = "A monitoring tool for Midnight blockchain validators"
authors = []

[[bin]]
name = "mvm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
hex = "0.4"

# Signal handling for graceful shutdown
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# PID file management
nix = { version = "0.27", features = ["fs", "signal", "process"] }

# TUI (Text User Interface)
ratatui = "0.26"
crossterm = "0.27"

# Configuration
toml = "0.8"
directories = "5.0"

# System information
hostname = "0.3"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
